fix align table

--- a/src/styles/global-styles.scss
+++ b/src/styles/global-styles.scss
@@ -111,3 +111,7 @@ th.td-top.ant-table-align-center.ant-table-row-cell-break-word {
   padding-left: 0;
 }
 }
+
+.ant-upload-list {
+  text-align: left;
+}
